--- a/WebPack/LazyLoad/Images/index.html
+++ b/WebPack/LazyLoad/Images/index.html
@@ -12,55 +12,56 @@
         <h1>UX is linked with performance.</h1>
         <p>Performance is linked with how people perceive your page... If it takes longer to load completelly, they might see it later... Or in marketing: might not see it at all.</p>
         <div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest1.jpg);">
                 <img src="./img_build/large-size-florest1.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest2.jpg);">
                 <img src="./img_build/large-size-florest2.jpg" width="720px" height="430px"  alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest3.jpg);">
                 <img src="./img_build/large-size-florest3.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest4.jpg);">
                 <img src="./img_build/large-size-florest4.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest5.jpg);">
                 <img src="./img_build/large-size-florest5.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest6.jpg);">
                 <img src="./img_build/large-size-florest6.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest7.jpg);">
                 <img src="./img_build/large-size-florest7.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest8.jpg);">
                 <img src="./img_build/large-size-florest8.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
-                <img src="./img_build/large-size-florest9.jpg" width="720px" height="430px" width="720px" height="430px" alt="Floresta" loading="lazy">
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest8.jpg);">
+                <img src="./img_build/large-size-florest9.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest10.jpg);">
                 <img src="./img_build/large-size-florest10.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest11.jpg);">
                 <img src="./img_build/large-size-florest11.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest12.jpg);">
                 <img src="./img_build/large-size-florest12.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
-            </div>
-            <div>
+            </div> 
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest13.jpg);">
                 <img src="./img_build/large-size-florest13.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest14.jpg);">
                 <img src="./img_build/large-size-florest14.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest15.jpg);">
                 <img src="./img_build/large-size-florest15.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
-            <div>
+            <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest16.jpg);">
                 <img src="./img_build/large-size-florest16.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
             </div>
         </div>
+
     </main>
     <footer>
         <script src="style.js" async></script>
