Adiciona atividade que exercita responsive images... no html

--- a/WebPack/Images_Optimization/images/index.html
+++ b/WebPack/Images_Optimization/images/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Testando Boas Praticas para Imagens">
+    <meta name="description" content="Testando Boas Praticas para Imagens: lazy Load e UX">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lazy Loading Images With Blur</title>
     <link rel="stylesheet" href="style.css">
