Adiciona uma ideia auto nos width e heith

--- a/WebPack/Images_Optimization/responsive/index.html
+++ b/WebPack/Images_Optimization/responsive/index.html
@@ -22,7 +22,9 @@
             https://placehold.co/1960x1080/png 1960w,
             https://placehold.co/750x430/png 750w,
             https://placehold.co/200x110/png 200w
-        " 
+        "
+        width="auto"
+        height="auto"
         sizes="100vw"
         alt="Imagem Teste">
     </main>
