Adiciona imagens responsivas nos images e compara

--- a/WebPack/Images_Optimization/images/index.html
+++ b/WebPack/Images_Optimization/images/index.html
@@ -13,52 +13,164 @@
         <p>Performance is linked with how people perceive your page... If it takes longer to load completelly, they might see it later... Or in marketing: might not see it at all.</p>
         <div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest1.jpg);">
-                <img src="./img_build/large-size-florest1.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest1.jpg"
+                    srcset="./img_build/large-size-florest1.jpg 1960w,
+                    ./img_build/medium-size-florest1.jpg 750w"
+                    sizes="100vw" 
+                    width="auto"
+                    height="auto"
+                    alt="Floresta"
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest2.jpg);">
-                <img src="./img_build/large-size-florest2.jpg" width="720px" height="430px"  alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest2.jpg"
+                    srcset="./img_build/large-size-florest2.jpg 1960w,
+                    ./img_build/medium-size-florest2.jpg 750w"
+                    sizes="100vw" 
+                    width="auto" 
+                    height="430px"  
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest3.jpg);">
-                <img src="./img_build/large-size-florest3.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest3.jpg" 
+                    srcset="./img_build/large-size-florest3.jpg 1960w,
+                    ./img_build/medium-size-florest3.jpg 750w"
+                    sizes="100vw" 
+                    width="auto" 
+                    height="430px" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest4.jpg);">
-                <img src="./img_build/large-size-florest4.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest4.jpg" 
+                    srcset="./img_build/large-size-florest4.jpg 1960w,
+                    ./img_build/medium-size-florest4.jpg 750w"
+                    sizes="100vw" 
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest5.jpg);">
-                <img src="./img_build/large-size-florest5.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest5.jpg"
+                srcset="./img_build/large-size-florest5.jpg 1960w,
+                    ./img_build/medium-size-florest5.jpg 750w" 
+                    sizes="100vw" 
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest6.jpg);">
-                <img src="./img_build/large-size-florest6.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest6.jpg" 
+                    srcset="./img_build/large-size-florest6.jpg 1960w,
+                    ./img_build/medium-size-florest6.jpg 750w"
+                    sizes="100vw"
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest7.jpg);">
-                <img src="./img_build/large-size-florest7.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest7.jpg" 
+                    srcset="./img_build/large-size-florest7.jpg 1960w,
+                    ./img_build/medium-size-florest7.jpg 750w"
+                    sizes="100vw"
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest8.jpg);">
-                <img src="./img_build/large-size-florest8.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest8.jpg" 
+                    srcset="./img_build/large-size-florest8.jpg 1960w,
+                    ./img_build/medium-size-florest8.jpg 750w"
+                    sizes="100vw"
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest8.jpg);">
-                <img src="./img_build/large-size-florest9.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest9.jpg" 
+                    srcset="./img_build/large-size-florest9.jpg 1960w,
+                    ./img_build/medium-size-florest9.jpg 750w"
+                    sizes="100vw"
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest10.jpg);">
-                <img src="./img_build/large-size-florest10.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest10.jpg" 
+                    srcset="./img_build/large-size-florest10.jpg 1960w,
+                    ./img_build/medium-size-florest10.jpg 750w"
+                    sizes="100vw"
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest11.jpg);">
-                <img src="./img_build/large-size-florest11.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest11.jpg" 
+                    srcset="./img_build/large-size-florest11.jpg 1960w,
+                    ./img_build/medium-size-florest11.jpg 750w"
+                    sizes="100vw"
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest12.jpg);">
-                <img src="./img_build/large-size-florest12.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest12.jpg" 
+                    srcset="./img_build/large-size-florest12.jpg 1960w,
+                    ./img_build/medium-size-florest12.jpg 750w"
+                    sizes="100vw"
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div> 
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest13.jpg);">
-                <img src="./img_build/large-size-florest13.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest13.jpg" 
+                    srcset="./img_build/large-size-florest13.jpg 1960w,
+                    ./img_build/medium-size-florest13.jpg 750w"
+                    sizes="100vw"
+                    width="auto" 
+                    height="auto" 
+                alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest14.jpg);">
-                <img src="./img_build/large-size-florest14.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest14.jpg" 
+                    srcset="./img_build/large-size-florest14.jpg 1960w,
+                    ./img_build/medium-size-florest14.jpg 750w"
+                    sizes="100vw"
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest15.jpg);">
-                <img src="./img_build/large-size-florest15.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest15.jpg" 
+                    srcset="./img_build/large-size-florest15.jpg 1960w,
+                    ./img_build/medium-size-florest15.jpg 750w"
+                    sizes="100vw"
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
             <div class="blur-load" style="background-image: url(./img_build/mini-thumb-florest16.jpg);">
-                <img src="./img_build/large-size-florest16.jpg" width="720px" height="430px" alt="Floresta" loading="lazy">
+                <img src="./img_build/large-size-florest16.jpg"
+                    srcset="./img_build/large-size-florest16.jpg 1960w,
+                    ./img_build/medium-size-florest16.jpg 750w"
+                    sizes="100vw" 
+                    width="auto" 
+                    height="auto" 
+                    alt="Floresta" 
+                loading="lazy">
             </div>
         </div>
 
